@@ -14,6 +14,7 @@ COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_LTS="Long Term Support (recommended)"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_NOCHANGE="Currently configured (no change)"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_STS="Short Term Support"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_TESTING="Testing"
+COM_JOOMLAUPDATE_CONFIGURATION="Joomla Update Configuration"
 COM_JOOMLAUPDATE_OVERVIEW="Joomla! Update"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_DIRECTORY="FTP directory"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_HOSTNAME="FTP host"
