@@ -2051,6 +2051,7 @@ a.jgrid:hover {	text-decoration: none;}
 .icon-16-help-shop					{	background-image: url(../images/menu/icon-16-help-shop.png);	}
 .icon-16-info						{	background-image: url(../images/menu/icon-16-info.png);	}
 .icon-16-install					{	background-image: url(../images/menu/icon-16-install.png);	}
+.icon-16-joomlaupdate				{	background-image: url(../images/menu/icon-16-install.png);	}
 .icon-16-language					{	background-image: url(../images/menu/icon-16-language.png);	}
 .icon-16-levels						{	background-image: url(../images/menu/icon-16-levels.png);	}
 .icon-16-logout						{	background-image: url(../images/menu/icon-16-logout.png);	}
