@@ -901,6 +901,10 @@ a img.calendar {
 	background-image: url(../images/menu/icon-16-install.png);
 }
 
+.icon-16-joomlaupdate {
+	background-image: url(../images/menu/icon-16-install.png);
+}
+
 .icon-16-language {
 	background-image: url(../images/menu/icon-16-language.png);
 }
