@@ -195,6 +195,7 @@ INSTL_WRITABLE="Writeable"
 INSTL_XML_SUPPORT="XML Support"
 INSTL_ZIP_SUPPORT_AVAILABLE="Native ZIP support"
 INSTL_ZLIB_COMPRESSION_SUPPORT="Zlib Compression Support"
+INSTL_PROCESS_BUSY="Process is in progress. Please wait..."
 
 ;Global strings
 JADMINISTRATOR="Administrator"
