@@ -35,7 +35,6 @@ class JInstallationViewFilesystem extends JView
 		$this->assignRef('state', $state);
 		$this->assignRef('form', $form);
 
-		JText::script('INSTL_FTP_SETTINGS_CORRECT');
 		parent::display($tpl);
 	}
 }
